# evidence-ledger-lite

./: LICENSE  README.md  SECURITY.md  pyproject.toml
evidence_ledger_lite/: __init__.py  canonical.py  cli.py  hashing.py  ledger.py  models.py  sample_event.json
examples/: kartjourney_integration.py
tests/: test_canonical.py  test_hash_chain.py  test_verify.py
workflows/: release.yml  tests.yml
