[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evidence-ledger-lite"
version = "0.1.0"
description = "Append-only, hash-chained evidence logs for analytics & AI pipelines."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Rohit Rajdev" }]
keywords = ["audit", "ledger", "evidence", "governance", "integrity", "tamper-evident"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
evidence-ledger = "evidence_ledger_lite.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["evidence_ledger_lite*"]
